--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "styled-components": "^6.1.14"
+    "styled-components": "^6.1.14",
+    "tailwindcss-animation-delay": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
