--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dotenv": "^0.1.3",
+    "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.14",
     "tailwindcss-animation-delay": "^2.0.1"
