--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^7.1.5",
     "react-scroll": "^1.9.0",
     "styled-components": "^6.1.14",
-    "tailwindcss-animation-delay": "^2.0.1"
+    "tailwindcss-animation-delay": "^2.0.1",
+    "tsparticles": "^3.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
