--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "mahmood-ahmad",
-  "homepage": "https://HammadMustafa7.github.io/PortFolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,39 +7,35 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.4.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.7",
     "@tsparticles/react": "^3.0.0",
-    "lucide-react": "^0.474.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "lucide-react": "^0.47.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^6.22.0",
     "react-scroll": "^1.9.0",
-    "styled-components": "^6.1.14",
+    "styled-components": "^6.1.8",
     "tailwindcss-animation-delay": "^2.0.1",
-    "tsparticles": "^3.8.1"
+    "tsparticles": "^3.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "gh-pages": "^6.3.0",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5"
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.1.1"
   }
 }
