--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint .",
@@ -22,7 +22,9 @@
     "react-dotenv": "^0.1.3",
     "react-router-dom": "^6.29.0",
     "react-scroll": "^1.9.0",
+    "react-toastify": "^11.0.3",
     "styled-components": "^6.1.8",
+    "sweetalert2": "^11.15.10",
     "tailwindcss-animation-delay": "^2.0.1",
     "tsparticles": "^3.0.2"
   },
